# deepdive

./: .gitignore  CMakeLists.txt  LICENSE  libdeepdive.sublime-project  readme.md
cmake/: deepdiveConfig.cmake.in  deepdiveConfigVersion.cmake.in
debian/: changelog  control  copyright  libdeepdive-dev.dirs  libdeepdive-dev.install  rules
include/libdeepdive/: deepdive.h
ros/: CMakeLists.txt  package.xml  readme.md
ros/cal/: example.tf2  granite.tf2  granite_backup.tf2  line.tf2  mgtf.tf2  office-old.tf2  office.tf2  pointer.tf2
ros/cfg/: calibration.yaml  deepdive-calibration.yaml  filter-port.yaml  filter-stbd.yaml  fusion.yaml  granite-calibration.yaml  granite-tracker-port.yaml  granite-tracker-stbd.yaml  granite-tracker.yaml  gui.rviz  object-truth.yaml  p4d.yaml  pointer.yaml  solver.yaml  tracker-dev.yaml  tracker-port.yaml  tracker-starboard.yaml  tracker-stbd.yaml
ros/cmake/: FindDeepdive.cmake
ros/conf/: example.yaml  granite.yaml  line.yaml  mgtf.yaml  office.yaml  pointer.yaml
ros/data/: example.bag  first.bag  granite-calibration.bag  granite1.bag  granite1f.bag  line.bag  new_correlated.bag  new_dynamic.bag  new_static.bag  office.bag  p4d-dynamic.bag  p4d-static.bag  readme.md
ros/extra/: heatmap.m
ros/launch/: calibrate.launch  deepdive.launch  granite.launch  record.launch  refine.launch  register.launch  stream.launch  test.launch  track.launch
ros/msg/: Button.msg  Event.msg  Light.msg  Lighthouse.msg  Lighthouses.msg  Motor.msg  Pulse.msg  Sensor.msg  Tracker.msg  Trackers.msg
ros/perf/: granite.csv
ros/rviz/: deepdive.rviz  example.rviz  granite.rviz  mgtf.rviz  office.rviz  pointer.rviz
ros/src/: deepdive.cc  deepdive.hh  deepdive_bridge.cc  deepdive_calibrate.cc  deepdive_calibration.cc  deepdive_filter.cc  deepdive_fusion.cc  deepdive_refine.cc  deepdive_registration.cc  deepdive_solver.cc  deepdive_test.cc  deepdive_track.cc  deepdive_tracker.cc
ros/srv/: GetLighthouse.srv  GetTracker.srv
src/: deepdive.c  deepdive.h  deepdive_data_button.c  deepdive_data_button.h  deepdive_data_imu.c  deepdive_data_imu.h  deepdive_data_light.c  deepdive_data_light.h  deepdive_dev_tracker.c  deepdive_dev_tracker.h  deepdive_dev_watchman.c  deepdive_dev_watchman.h  deepdive_tool.c  deepdive_usb.c  deepdive_usb.h  test_tool.c
